--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,40 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Roboto', sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+    margin: 0 auto;
+    width: 80%;
+}
+
+.App-header {
+    background-color: black;
+    color: white;
+    padding: 15px;
+}
+
+.App-header input {
+    display: inline-block;
+    color: whitesmoke;
+    font-size: 2rem;
+    font-style: italic;
+    font-weight: bold;
+    text-transform: uppercase;
+    background: none;
+    outline: none;
+    border: none;
+    appearance: none;
+}
+
+.App-header::before {
+    content: '/r/';
+    display: inline-block;
+    color: whitesmoke;
+    font-size: 2rem;
+    font-style: italic;
+    font-weight: bold;
+    text-transform: uppercase;
 }
